Fix box shadow break above banner and fix lack of box shadow in Safari. Not tested on IE.

--- a/style.css
+++ b/style.css
@@ -297,7 +297,7 @@ p {
 }
 
 @media screen and (min-width: 960px) {
-  body {
+  #main_container {
     width: 960px;
     margin-left: auto;
     margin-right: auto;
